<resources>
    <string name="app_name">BankAccount</string>
    <string name="main_title">Best Bank</string>
    <string name="main_subtitle">Because Money</string>
    <string name="main_balance">Your balance</string>
    <string name="main_euro">€</string>
    <string name="main_refresh">Refresh</string>
    <string name="login_login">Login</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
</resources>